ground up rework from last commit, from basic 2 operand operations to full pemdas support

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,17 @@
                 "-fansi-escape-codes",
                 "-g",
                 "${workspaceFolder}/main.c",
+                "${workspaceFolder}/add_parens.c",
                 "${workspaceFolder}/calculate.c",
-                "${workspaceFolder}/convert.c",
-                "${workspaceFolder}/create_terms.c",
-                "${workspaceFolder}/get_input.c",
+                "${workspaceFolder}/convert_d_to_str.c",
+                "${workspaceFolder}/convert_str_to_d.c",
+                "${workspaceFolder}/find_bounds.c",
                 "${workspaceFolder}/is_oprtr.c",
+                "${workspaceFolder}/parens_exist.c",
                 "${workspaceFolder}/parse.c",
+                "${workspaceFolder}/replace_str.c",
+                "${workspaceFolder}/verify_oprtr.c",
+                "${workspaceFolder}/verify_parens.c",
                 "-o",
                 "${workspaceFolder}/main"
             ],
