--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,15 +9,18 @@
                 "-fansi-escape-codes",
                 "-g",
                 "${workspaceFolder}/main.c",
+                "${workspaceFolder}/add_mult.c",
                 "${workspaceFolder}/add_parens.c",
                 "${workspaceFolder}/calculate.c",
                 "${workspaceFolder}/convert_d_to_str.c",
                 "${workspaceFolder}/convert_str_to_d.c",
                 "${workspaceFolder}/find_bounds.c",
+                "${workspaceFolder}/find_parens.c",
+                "${workspaceFolder}/find_var.c",
                 "${workspaceFolder}/is_oprtr.c",
-                "${workspaceFolder}/parens_exist.c",
                 "${workspaceFolder}/parse.c",
                 "${workspaceFolder}/replace_str.c",
+                "${workspaceFolder}/verify_equals.c",
                 "${workspaceFolder}/verify_oprtr.c",
                 "${workspaceFolder}/verify_parens.c",
                 "-o",
