--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,11 +12,12 @@
                 "${workspaceFolder}/add_mult.c",
                 "${workspaceFolder}/add_parens.c",
                 "${workspaceFolder}/calculate.c",
+                "${workspaceFolder}/check_parens_exist.c",
+                "${workspaceFolder}/check_var_exists.c",
                 "${workspaceFolder}/convert_d_to_str.c",
                 "${workspaceFolder}/convert_str_to_d.c",
                 "${workspaceFolder}/find_bounds.c",
-                "${workspaceFolder}/find_parens.c",
-                "${workspaceFolder}/find_var.c",
+                "${workspaceFolder}/handle_x1.c",
                 "${workspaceFolder}/is_oprtr.c",
                 "${workspaceFolder}/parse.c",
                 "${workspaceFolder}/replace_str.c",
