--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,10 +12,12 @@
                 "${workspaceFolder}/add_mult.c",
                 "${workspaceFolder}/add_parens.c",
                 "${workspaceFolder}/calculate.c",
+                "${workspaceFolder}/check_eqsign_exists.c",
                 "${workspaceFolder}/check_parens_exist.c",
                 "${workspaceFolder}/check_var_exists.c",
                 "${workspaceFolder}/convert_d_to_str.c",
                 "${workspaceFolder}/convert_str_to_d.c",
+                "${workspaceFolder}/extract.c",
                 "${workspaceFolder}/find_bounds.c",
                 "${workspaceFolder}/handle_x1.c",
                 "${workspaceFolder}/is_oprtr.c",
@@ -24,6 +26,8 @@
                 "${workspaceFolder}/verify_equals.c",
                 "${workspaceFolder}/verify_oprtr.c",
                 "${workspaceFolder}/verify_parens.c",
+                "${workspaceFolder}/utils/collapse_str.c",
+                "${workspaceFolder}/utils/print_str.c",
                 "-o",
                 "${workspaceFolder}/main"
             ],
