--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,24 +9,20 @@
                 "-fansi-escape-codes",
                 "-g",
                 "${workspaceFolder}/main.c",
-                "${workspaceFolder}/add_mult.c",
                 "${workspaceFolder}/add_parens.c",
                 "${workspaceFolder}/calculate.c",
-                "${workspaceFolder}/check_eqsign_exists.c",
+                "${workspaceFolder}/check_oprtr_exists.c",
                 "${workspaceFolder}/check_parens_exist.c",
-                "${workspaceFolder}/check_var_exists.c",
                 "${workspaceFolder}/convert_d_to_str.c",
                 "${workspaceFolder}/convert_str_to_d.c",
-                "${workspaceFolder}/extract.c",
                 "${workspaceFolder}/find_bounds.c",
-                "${workspaceFolder}/handle_x1.c",
-                "${workspaceFolder}/is_oprtr.c",
+                "${workspaceFolder}/find_nearest_parens.c",
                 "${workspaceFolder}/parse.c",
                 "${workspaceFolder}/replace_str.c",
-                "${workspaceFolder}/verify_equals.c",
-                "${workspaceFolder}/verify_oprtr.c",
-                "${workspaceFolder}/verify_parens.c",
                 "${workspaceFolder}/utils/collapse_str.c",
+                "${workspaceFolder}/utils/expand_str.c",
+                "${workspaceFolder}/utils/insert_str.c",
+                "${workspaceFolder}/utils/is_oprtr.c",
                 "${workspaceFolder}/utils/print_str.c",
                 "-o",
                 "${workspaceFolder}/main"
