--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,22 +8,30 @@
                 "-fcolor-diagnostics",
                 "-fansi-escape-codes",
                 "-g",
+
                 "${workspaceFolder}/main.c",
-                "${workspaceFolder}/add_parens.c",
-                "${workspaceFolder}/calculate.c",
-                "${workspaceFolder}/check_oprtr_exists.c",
-                "${workspaceFolder}/check_parens_exist.c",
-                "${workspaceFolder}/convert_d_to_str.c",
-                "${workspaceFolder}/convert_str_to_d.c",
-                "${workspaceFolder}/find_bounds.c",
-                "${workspaceFolder}/find_nearest_parens.c",
-                "${workspaceFolder}/parse.c",
-                "${workspaceFolder}/replace_str.c",
+                "${workspaceFolder}/set_workflow.c",
+
+                "${workspaceFolder}/workflows/arithmetic/solve_arithmetic.c",
+
+                "${workspaceFolder}/general/add_parens.c",
+                "${workspaceFolder}/general/calculate_result.c",
+                "${workspaceFolder}/general/check_oprtr_exists.c",
+                "${workspaceFolder}/general/check_parens_exist.c",
+                "${workspaceFolder}/general/convert_d_to_str.c",
+                "${workspaceFolder}/general/convert_str_to_d.c",
+                "${workspaceFolder}/general/find_bounds.c",
+                "${workspaceFolder}/general/find_nearest_parens.c",
+                "${workspaceFolder}/general/insert_result.c",
+                "${workspaceFolder}/general/parse_equation.c",
+                "${workspaceFolder}/general/solve.c",
+
                 "${workspaceFolder}/utils/collapse_str.c",
                 "${workspaceFolder}/utils/expand_str.c",
                 "${workspaceFolder}/utils/insert_str.c",
                 "${workspaceFolder}/utils/is_oprtr.c",
                 "${workspaceFolder}/utils/print_str.c",
+
                 "-o",
                 "${workspaceFolder}/main"
             ],
