--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,21 @@
                 "${workspaceFolder}/set_workflow.c",
 
                 "${workspaceFolder}/workflows/arithmetic/solve_arithmetic.c",
+                "${workspaceFolder}/workflows/arithmetic/find_bounds_ari.c",
+
+                "${workspaceFolder}/workflows/algebraic/find_eqsign.c",
+                "${workspaceFolder}/workflows/algebraic/insert_eqzero.c",
+                "${workspaceFolder}/workflows/algebraic/insert_mult.c",
+                "${workspaceFolder}/workflows/algebraic/isolate.c",
+                "${workspaceFolder}/workflows/algebraic/process_algebraic.c",
+                "${workspaceFolder}/workflows/algebraic/strip_parens.c",
+                "${workspaceFolder}/workflows/algebraic/find_bounds_alg.c",
+                "${workspaceFolder}/workflows/algebraic/remove_plus0.c",
+                "${workspaceFolder}/workflows/algebraic/remove_x1.c",
+
+
+
+
 
                 "${workspaceFolder}/general/add_parens.c",
                 "${workspaceFolder}/general/calculate_result.c",
@@ -21,7 +36,7 @@
                 "${workspaceFolder}/general/check_parens_exist.c",
                 "${workspaceFolder}/general/convert_d_to_str.c",
                 "${workspaceFolder}/general/convert_str_to_d.c",
-                "${workspaceFolder}/general/find_bounds.c",
+                // "${workspaceFolder}/general/find_bounds.c",
                 "${workspaceFolder}/general/find_nearest_parens.c",
                 "${workspaceFolder}/general/insert_result.c",
                 "${workspaceFolder}/general/parse_equation.c",
