--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,10 +14,7 @@
                 "${workspaceFolder}/set_workflow.c",
 
                 "${workspaceFolder}/workflows/arithmetic/process_arithmetic.c",
-                "${workspaceFolder}/workflows/arithmetic/find_i_parens.c",
                 "${workspaceFolder}/workflows/arithmetic/find_bounds_ari.c",
-                "${workspaceFolder}/workflows/arithmetic/insert_denoms.c",
-                "${workspaceFolder}/workflows/arithmetic/parse_denoms.c",
 
                 "${workspaceFolder}/workflows/algebraic/find_eqsign.c",
                 "${workspaceFolder}/workflows/algebraic/insert_eqzero.c",
@@ -29,12 +26,7 @@
                 "${workspaceFolder}/workflows/algebraic/remove_plus0.c",
                 "${workspaceFolder}/workflows/algebraic/remove_x1.c",
 
-
-
-
-
-                "${workspaceFolder}/general/add_parens_div.c",
-                "${workspaceFolder}/general/add_parens_default.c",
+                "${workspaceFolder}/general/add_parens.c",
                 "${workspaceFolder}/general/calculate_result.c",
                 "${workspaceFolder}/general/check_division_exists.c",
                 "${workspaceFolder}/general/check_oprtr_exists.c",
@@ -42,12 +34,17 @@
                 "${workspaceFolder}/general/check_parens_exist.c",
                 "${workspaceFolder}/general/convert_d_to_str.c",
                 "${workspaceFolder}/general/convert_str_to_d.c",
-                // "${workspaceFolder}/general/find_bounds.c",
+                "${workspaceFolder}/general/create_result_str.c",
+                "${workspaceFolder}/general/equate_denoms.c",
+                "${workspaceFolder}/general/find_bounds.c",
                 "${workspaceFolder}/general/find_nearest_parens.c",
+                "${workspaceFolder}/general/init_eq.c",
+                "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_result.c",
                 "${workspaceFolder}/general/parse_equation.c",
+                "${workspaceFolder}/general/reduce_fractions.c",
                 "${workspaceFolder}/general/solve.c",
-
+                
                 "${workspaceFolder}/utils/collapse_str.c",
                 "${workspaceFolder}/utils/expand_str.c",
                 "${workspaceFolder}/utils/insert_str.c",
