unified insert_parens for both arithmetic and algebraic & cleaner logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "general.h": "c",
         "algebraic.h": "c",
         "__config": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "_stdio.h": "c"
     }
 }
