calculating operands with vars eg 2x*2x = 4x^2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "algebraic.h": "c",
         "__config": "c",
         "algorithm": "c",
-        "_stdio.h": "c"
+        "_stdio.h": "c",
+        "x,c": "c"
     }
 }
