--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,15 +14,16 @@
                 "${workspaceFolder}/set_workflow.c",
 
                 "${workspaceFolder}/workflows/arithmetic/process_arithmetic.c",
-   
-                "${workspaceFolder}/workflows/arithmetic/find_bounds.c",
-                "${workspaceFolder}/workflows/arithmetic/parse_equation.c",
                 "${workspaceFolder}/workflows/arithmetic/solve.c",
 
 
+                "${workspaceFolder}/workflows/algebraic/calculate_var_exps.c",
                 "${workspaceFolder}/workflows/algebraic/insert_eqzero.c",
                 "${workspaceFolder}/workflows/algebraic/insert_mult.c",
+                "${workspaceFolder}/workflows/algebraic/parse_var.c",
                 "${workspaceFolder}/workflows/algebraic/process_algebraic.c",
+                "${workspaceFolder}/workflows/algebraic/remove_vars.c",
+                "${workspaceFolder}/workflows/algebraic/solve_alg.c",
 
 
                 "${workspaceFolder}/general/calculate_result.c",
@@ -30,12 +31,16 @@
                 "${workspaceFolder}/general/convert_str_to_d.c",
                 "${workspaceFolder}/general/create_result_str.c",
 
+                "${workspaceFolder}/general/find_bounds.c",
+
                 "${workspaceFolder}/general/equate_denoms.c",
 
                 "${workspaceFolder}/general/init_eq.c",
                 "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_parens.c",
                 "${workspaceFolder}/general/insert_result.c",
+
+                "${workspaceFolder}/general/parse_equation.c",
 
                 "${workspaceFolder}/general/reduce_fraction.c",
 
