--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
 
                 "${workspaceFolder}/main.c",
                 "${workspaceFolder}/clean_input.c",
-                "${workspaceFolder}/set_workflow.c",
+                "${workspaceFolder}/enter_workflow.c",
 
                 "${workspaceFolder}/workflows/arithmetic/process_arithmetic.c",
                 "${workspaceFolder}/workflows/arithmetic/solve.c",
@@ -22,41 +22,43 @@
                 "${workspaceFolder}/workflows/algebraic/handle_1x.c",
                 "${workspaceFolder}/workflows/algebraic/init_vars.c",
                 "${workspaceFolder}/workflows/algebraic/insert_eqzero.c",
-                "${workspaceFolder}/workflows/algebraic/insert_mult.c",
-                "${workspaceFolder}/workflows/algebraic/parse_var.c",
                 "${workspaceFolder}/workflows/algebraic/process_algebraic.c",
                 "${workspaceFolder}/workflows/algebraic/remove_exp1.c",
                 "${workspaceFolder}/workflows/algebraic/remove_vars.c",
                 "${workspaceFolder}/workflows/algebraic/solve_alg.c",
                 "${workspaceFolder}/workflows/algebraic/var_exists.c",
 
-
+                
                 "${workspaceFolder}/general/calculate_result.c",
                 "${workspaceFolder}/general/convert_d_to_str.c",
                 "${workspaceFolder}/general/convert_str_to_d.c",
                 "${workspaceFolder}/general/create_result_str.c",
 
-                "${workspaceFolder}/general/find_bounds.c",
-
                 "${workspaceFolder}/general/equate_denoms.c",
+
+                "${workspaceFolder}/general/find_oprtr.c",
 
                 "${workspaceFolder}/general/init_eq.c",
                 "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_parens.c",
                 "${workspaceFolder}/general/insert_result.c",
-
-                "${workspaceFolder}/general/parse_equation.c",
+                "${workspaceFolder}/general/is_var.c",
 
                 "${workspaceFolder}/general/reduce_fraction.c",
 
+                "${workspaceFolder}/general/parsing/find_bounds_by_highest_op.c",
+                "${workspaceFolder}/general/parsing/find_bounds_by_parens.c",
+                "${workspaceFolder}/general/parsing/parse_equation.c",
 
                 "${workspaceFolder}/general/verifications/oprtr_exists.c",
                 "${workspaceFolder}/general/verifications/parens_balanced.c",
                 "${workspaceFolder}/general/verifications/verify.c",
                 
                 "${workspaceFolder}/utils/collapse_str.c",
+                "${workspaceFolder}/utils/copy_bounded_str.c",
                 "${workspaceFolder}/utils/insert_str.c",
                 "${workspaceFolder}/utils/is_oprtr.c",
+                "${workspaceFolder}/utils/print_bounded_str.c",
                 "${workspaceFolder}/utils/print_str.c",
                 "${workspaceFolder}/utils/weigh_chars.c",
 
