--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -35,6 +35,7 @@
                 "${workspaceFolder}/general/create_result_str.c",
 
                 "${workspaceFolder}/general/equate_denoms.c",
+                "${workspaceFolder}/general/equation_is_operable.c",
 
                 "${workspaceFolder}/general/find_oprtr.c",
 
@@ -42,18 +43,19 @@
                 "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_parens.c",
                 "${workspaceFolder}/general/insert_result.c",
-                "${workspaceFolder}/general/is_var.c",
 
                 "${workspaceFolder}/general/reduce_fraction.c",
 
                 "${workspaceFolder}/general/parsing/find_bounds_by_highest_op.c",
                 "${workspaceFolder}/general/parsing/find_bounds_by_parens.c",
+                "${workspaceFolder}/general/parsing/find_bounds.c",
                 "${workspaceFolder}/general/parsing/parse_equation.c",
 
                 "${workspaceFolder}/general/verifications/oprtr_exists.c",
                 "${workspaceFolder}/general/verifications/parens_balanced.c",
                 "${workspaceFolder}/general/verifications/verify.c",
                 
+                "${workspaceFolder}/utils/check_vars.c",
                 "${workspaceFolder}/utils/collapse_str.c",
                 "${workspaceFolder}/utils/copy_bounded_str.c",
                 "${workspaceFolder}/utils/insert_str.c",
