--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "__config": "c",
         "algorithm": "c",
         "_stdio.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "_string.h": "c"
     }
 }
