--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,13 @@
         "_stdio.h": "c",
         "stdio.h": "c",
         "_string.h": "c",
-        "parsing.h": "c"
+        "parsing.h": "c",
+        "bitset": "c",
+        "istream": "c",
+        "locale": "c",
+        "sstream": "c",
+        "streambuf": "c",
+        "string": "c",
+        "string_view": "c"
     }
 }
