--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,30 +10,40 @@
                 "-g",
 
                 "${workspaceFolder}/main.c",
+                "${workspaceFolder}/clean_input.c",
                 "${workspaceFolder}/enter_workflow.c",
-                "${workspaceFolder}/remove_spaces.c",
 
                 "${workspaceFolder}/workflows/arithmetic/process_arithmetic.c",
                 "${workspaceFolder}/workflows/arithmetic/solve.c",
+
+                "${workspaceFolder}/workflows/arithmetic/bounding/find_bounds_by_highest_op.c",
+                "${workspaceFolder}/workflows/arithmetic/bounding/find_bounds_by_parens.c",
+                "${workspaceFolder}/workflows/arithmetic/bounding/find_bounds.c",
+                "${workspaceFolder}/workflows/arithmetic/parsing/parse_division.c",
+                "${workspaceFolder}/workflows/arithmetic/parsing/parse_operand.c",
+                "${workspaceFolder}/workflows/arithmetic/parsing/parse.c",
 
 
                 "${workspaceFolder}/workflows/algebraic/calculate_vars.c",
                 
                 "${workspaceFolder}/workflows/algebraic/create_var_str.c",
-                "${workspaceFolder}/workflows/algebraic/handle_1x.c",
+                "${workspaceFolder}/workflows/algebraic/handle_mult1.c",
                 "${workspaceFolder}/workflows/algebraic/handle_vars.c",
-                "${workspaceFolder}/workflows/algebraic/init_vars.c",
                 "${workspaceFolder}/workflows/algebraic/insert_eqzero.c",
+                "${workspaceFolder}/workflows/algebraic/insert_exp1.c",
                 "${workspaceFolder}/workflows/algebraic/process_algebraic.c",
                 "${workspaceFolder}/workflows/algebraic/rearrange.c",
                 "${workspaceFolder}/workflows/algebraic/remove_exp1.c",
                 "${workspaceFolder}/workflows/algebraic/remove_vars.c",
                 "${workspaceFolder}/workflows/algebraic/solve_alg.c",
 
+
+
                 
                 "${workspaceFolder}/general/calculate_result.c",
                 "${workspaceFolder}/general/convert_d_to_str.c",
                 "${workspaceFolder}/general/convert_str_to_d.c",
+                "${workspaceFolder}/general/convert_str_to_int.c",
                 "${workspaceFolder}/general/create_result_str.c",
 
                 "${workspaceFolder}/general/equate_denoms.c",
@@ -41,12 +51,14 @@
 
                 "${workspaceFolder}/general/find_oprtr.c",
 
-                "${workspaceFolder}/general/init_eq.c",
                 "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_parens.c",
                 "${workspaceFolder}/general/insert_result.c",
 
+                "${workspaceFolder}/general/is_operable.c",
+
                 "${workspaceFolder}/general/reduce_fraction.c",
+                "${workspaceFolder}/general/remove_unnecessary_parens.c",
 
                 "${workspaceFolder}/general/parsing/find_bounds_by_highest_op.c",
                 "${workspaceFolder}/general/parsing/find_bounds_by_parens.c",
