--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "sstream": "c",
         "streambuf": "c",
         "string": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "bounding.h": "c"
     }
 }
