--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,10 +13,8 @@
                 "${workspaceFolder}/clean_input.c",
                 "${workspaceFolder}/enter_workflow.c",
 
-                "${workspaceFolder}/workflows/arithmetic/init_eq.c",
-                "${workspaceFolder}/workflows/arithmetic/process.c",
-                "${workspaceFolder}/workflows/arithmetic/solve.c",
 
+                "${workspaceFolder}/workflows/arithmetic/solve.c",
                 "${workspaceFolder}/workflows/arithmetic/parsing/extract_num.c",
                 "${workspaceFolder}/workflows/arithmetic/parsing/parse_inoperable_division.c",
                 "${workspaceFolder}/workflows/arithmetic/parsing/parse_oprtn.c",
@@ -47,15 +45,14 @@
                 "${workspaceFolder}/general/find_oprtr.c",
                 "${workspaceFolder}/general/insert_denom.c",
                 "${workspaceFolder}/general/insert_parens.c",
-                "${workspaceFolder}/general/insert_result.c",
                 "${workspaceFolder}/general/is_operable.c",
                 "${workspaceFolder}/general/reduce_fraction.c",
                 "${workspaceFolder}/general/remove_unnecessary_parens.c",
 
-                "${workspaceFolder}/general/bounding/find_bounds_by_highest_op.c",
-                "${workspaceFolder}/general/bounding/find_bounds_by_parens.c",
-                "${workspaceFolder}/general/bounding/find_bounds.c",
-                "${workspaceFolder}/general/bounding/init.c",
+                "${workspaceFolder}/bounding/find_bounds_by_highest_op.c",
+                "${workspaceFolder}/bounding/find_bounds_by_parens.c",
+                "${workspaceFolder}/bounding/find_bounds.c",
+                "${workspaceFolder}/bounding/init.c",
 
                 "${workspaceFolder}/general/verifications/oprtr_exists.c",
                 "${workspaceFolder}/general/verifications/parens_balanced.c",
